--- a/html/style.css
+++ b/html/style.css
@@ -18,7 +18,9 @@ body {
 	opacity: 0.9;
 }
 
-input[type=text] {
+input[type=text],
+input[type=date],
+input[type=number] {
 	width: 100%;
 	padding: 7px;
 	text-align: center;
